--- a/src/components/Playerscore/style.css
+++ b/src/components/Playerscore/style.css
@@ -1,7 +1,19 @@
 .player-score {
-    display: flex;
     box-sizing: border-box;
-    border: 0.2rem solid var(--color-fiery-rose);
+    width: 50px;
+    height: 20px;
+    background-color: var(--color-floral-white);
+    box-sizing: border-box;
+    border: 2px solid var(--color-fiery-rose);
+    padding: 1px;
+    display: flex;
+    gap: 1px;
 }
 
+.player-score > .pointer {
+    background-color: var(--color-old-silver);
+    text-indent: -9999px;
+    overflow: hidden;
+    width: 33%;
+}
 
